# USD-EnvResolver

./: CMakeLists.txt  README.md
cmake/: FindKatana.cmake  FindUSD.cmake
src/: CMakeLists.txt  debugCodes.cpp  debugCodes.h  plugInfo.json.rsc  resolver.cpp  resolver.h
